--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "husky": "1.3.1",
     "mocha": "5.2.0",
     "nock": "10.0.6",
-    "nyc": "13.3.0",
+    "nyc": "^14.1.1",
     "rimraf": "2.6.3",
     "sinon": "7.2.3",
     "sinon-chai": "3.3.0",
